[package]
authors = ["Gosha Krikun <g.krikun@innopolis.ru>"]
edition = "2018"
readme = "README.md"
name = "pullups"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
tm1637 = "0.1.0"
waveshare-rp2040-zero = "0.8.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# embedded-alloc = "0.6.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --example device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "pullups"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
